--- a/lab3.html
+++ b/lab3.html
@@ -198,19 +198,22 @@
     </tr>
     <tr>
         <td rowspan="2">CUMPUS LIFE</td>
-        <td colspan="2"><li>ENJOY VACATIONS AND TRIPS WITH FRIENDS</li></td>
-</tr>
-<tr>
-    <td colspan="2"><li>CELEBRATED VARIOUS FESTIVAL AND CULTURAL EVENTS</li></td>
-</tr>
-</table>
-<div class="audio-container">
-    <!-- Add an audio element with the song source -->
-    <audio id="audio-player" controls>
-        <source src="gg.mp3" type="audio/mpeg">
-    </audio>
+        <td colspan="2"><li>HANGING OUT : SPENDING TIME WITH FRIENDS AT LOCAL CAFES, PARKS, 
+                            OR JUST RELAXING IN DORM ROOMS IS AN INTEGRAL PART OF CAMPUS LIFE, 
+                            FOSTERING FRIENDSHIPS AND BONDS.</li></td>
+    </tr>
+    <tr>
+    <td colspan="2"><li>CELEBRATIONS: CELEBRATING BIRTHDAYS, ACHIEVEMENTS, OR SPECIAL OCCASIONS WITH FRIENDS AND
+                        CLASSMATES CAN CREATE LASTING MEMORIES.</li></td>
+    </tr>
+    </table>
+    <div class="audio-container">
+        <!-- Add an audio element with the song source -->
+        <audio id="audio-player" controls>
+        <source src="memories.mp3" type="audio/mpeg">
+        </audio>
 
-</div>
+    </div>
 </div>
 </body>
 </html>
