--- a/lab3.html
+++ b/lab3.html
@@ -206,6 +206,10 @@
         <td colspan="2"><li>CELEBRATIONS: CELEBRATING BIRTHDAYS, ACHIEVEMENTS, OR SPECIAL OCCASIONS WITH FRIENDS AND
             CLASSMATES CAN CREATE LASTING MEMORIES.</li></td>
     </tr>
+
+    <td colspan="2"><li>CELEBRATIONS: CELEBRATING BIRTHDAYS, ACHIEVEMENTS, OR SPECIAL OCCASIONS WITH FRIENDS AND
+        CLASSMATES CAN CREATE LASTING MEMORIES.</li></td>
+    </tr>
     </table>
     <div class="audio-container">
         <!-- Add an audio element with the song source -->
